force-app/main/default/objects/Customer_Commitment__c/Customer_Commitment__c.object-meta.xml
<CustomObject>
    <label>고객 약속</label>
    <nameField>
        <label>Customer Commitment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>