force-app/main/default/objects/Customer_Commitment__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>고객 약속에 대한 내부 승인 상태. 약속을 실행 기준으로 확정하기 전 승인 절차의 현재 상태를 나타낸다.</description>
    <inlineHelpText>이 약속의 내부 승인 상태를 선택하세요.</inlineHelpText>
    <label>승인 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미승인</fullName>
                <default>true</default>
                <label>미승인</label>
            </value>
            <value>
                <fullName>승인</fullName>
            </value>
            <value>
                <fullName>반려</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>