force-app/main/default/objects/Customer_Commitment__c/fields/Commitment_Version__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Version__c</fullName>
    <description>고객에게 최종 약속한 내용의 버전. 협상 이력이 아니라 확정된 약속의 회차를 표기한다.</description>
    <inlineHelpText>고객에게 최종 확정한 약속의 버전을 입력하세요 (예: D1).</inlineHelpText>
    <label>약속 버전</label>
    <length>20</length>
    <type>Text</type>
</CustomField>