force-app/main/default/objects/Customer_Commitment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>계약</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Customer Commitment</relationshipLabel>
    <relationshipName>Customer_Commitment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>