force-app/main/default/objects/Customer_Commitment__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>고객에게 최종 약속한 납기일. D1 실행 기준의 출발점이 되는 날짜다.</description>
    <inlineHelpText>고객에게 최종 확정한 납기일을 선택하세요.</inlineHelpText>
    <label>최종 납기</label>
    <type>Date</type>
</CustomField>