force-app/main/default/objects/Customer_Commitment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>사업기회</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Commitment</relationshipLabel>
    <relationshipName>Customer_Commitment</relationshipName>
    <type>Lookup</type>
</CustomField>