force-app/main/default/objects/Customer_Commitment__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>고객에게 최종 약속한 계약 금액. 협상 중간안이 아니라 확정 금액을 담는다.</description>
    <inlineHelpText>고객에게 최종 확정한 금액을 입력하세요.</inlineHelpText>
    <label>최종 금액</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>