force-app/main/default/objects/Customer_Commitment__c/fields/Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <description>고객에게 약속한 특약 사항. 계약 특약 중 실행·인수 판별에 쓰이는 조건을 담는다.</description>
    <inlineHelpText>고객에게 약속한 특약 조건을 입력하세요.</inlineHelpText>
    <label>특수조건</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>